added template; added cmdParameters

--- a/restrictBuildUsingHibernate/build.gradle
+++ b/restrictBuildUsingHibernate/build.gradle
@@ -5,6 +5,7 @@ repositories {
 }
 
 configurations {
+	println opa
 	compile.incoming.afterResolve {
 		File out = new File("out.txt");
 		out.delete();
